# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import profileRouter from "./profile";
 import companiesRouter from "./companies";
+import declarationsRouter from "./declarations";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(profileRouter);
 router.use(companiesRouter);
+router.use(declarationsRouter);
 
 export default router;
